# vision_notepad_bot

./: .gitignore  README.md  config.py  icon_detector.py  json_api.py  main.py  notepad_bot.py  pyproject.toml  requirements.txt
screenshots/: README.md
